--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Jekyll configuration
 
-name: My blog
+name: Takabe Lab.
 description: A jekyll theme
 
 # url is currently only used only for the RSS feed in feed.xml
@@ -22,13 +22,13 @@ gaaccount: ''
 # The 'comments' setting enables comments. You'll need to select either
 # disqus or isso below to choose a comment system. Individual posts can
 # override 'comments' to disable on a post-by-post basis.
-comments: true
+comments: false
 
 # Set this to your public isso URL to enable comments via isso. Set to '' to disable isso.
-isso: ''
+#isso: ''
 
 # Set this to your disqus shortname to enable comments via disqus. Set to '' to disable disqus.
-disqus: ''
+#disqus: ''
 
 permalink: /:year/:month/:title
 paginate: 3
