--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
  数理・計算科学系<br>
  大岡山キャンパス西8号館8F W805<br>
  [玄関から廊下突き当りのエレベーター] <br>
- mail takabe(あっと) c.titech.ac.jp
+ mail takabe(あっと) comp.isct.ac.jp (new!)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
